--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,6 +25,11 @@ h4,p{
   h4,p{
   text-align: center;
 }
+}
 
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
