--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,17 @@
 <nav class="navbar navbar-default "  style="background-color: #4F4D53; height: 48px ">
   <div class="container-fluid ">
     <div class="navbar-header">
-     <a class="navbar-brand" href="#"><img src="img/logo.png" height="45px"></a>
+     <a class="navbar-brand" href="#"><img src="assets/gtd_logo.png" height="45px"></a>
      </div>
   </div>
 </nav>
+
+<img src="assets/img-hero.jpg">
+<div class="center">
+    <img src="assets/img_lisa_circle.png">
+    <img src="assets/img_dannielle_circle.png">
+    <img src="assets/img_brian_circle.png">
+</div>
 
 <div class="text-center">
     <h1 style="text-height: 100px; color:#4F4D53; font-style: Roboto Black "> <b>Hello we're gtd.</b> </h1>
