--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,11 @@
   </div>
 </nav>
 
-<img src="assets/img-hero.jpg">
+<img src="./assets/img-hero.jpg">
 <div class="center">
-    <img src="assets/img_lisa_circle.png">
-    <img src="assets/img_dannielle_circle.png">
-    <img src="assets/img_brian_circle.png">
+    <img src="./assets/img_lisa_circle.png">
+    <img src="./assets/img_dannielle_circle.png">
+    <img src="./assets/img_brian_circle.png">
 </div>
 
 <div class="text-center">
